# sphere_games

./: .gitignore  LICENSE  README.md  ctf_1v1_arena.world
agents/: blue_simple.py  blue_simple2.py  blue_simple_agent.py  ctf_Q_learning.py  red_agent.npy  red_learning_agent.py  red_simple.py  red_simple2.py  simple_agent.py  test_agent.npy
arenas/: ctf_1v1_arena.world  koth_1v1_arena.world
calibrate/: manual.py  manual_control.py  show.py
competition/: README.md  blue_player.py  camera_host.py  display_host.py  red_player.py  sphero_blue.js  sphero_red.js
ctf_1v1/: README.md  blue_agent.npy  ctf_1v1_arena.world  red_agent.npy  sphere_tracker.py  two_agent_Q-learning.py
docs/: ctf_README.md
host/: blue_node.js  constants.py  red_node.js  red_node2.js  reset_game.py  setup_arena.py  sim_tracker.py  sphero_blue.js  sphero_node.py  sphero_red.js  sphero_tracker.py  sphero_tracker_subtraction.py  start_game.py  test_setup_arena.py  test_utilities.py  utilities.py
king_of_the_hill/: CMakeLists.txt  proof_of_concept_arena.world  simple_rl_agent.py  sphere_tracker.py
koth_1v1/: README.md  blue_agent.npy  koth_1v1_arena.world  red_agent.npy  sphere_tracker.py  two_agent_Q-learning.py
koth_poc/: README.md  sphere_drive.cc
plugins/: sphere_drive.cc
proof_of_concept/: README.md  sphere_tracker.py
ros_comms/: README.md  cam_cv_pub.py  keep_center.py  rospy_demo.py  sphero_command.js
scripts/: install_sprk.sh  kill_all.sh  robot_ros.sh  set_environment.sh  set_team_addr.sh  setup_arena.sh  setup_remote_keys.sh  shutdown_arena.sh  start_camera.sh  stop_ros.sh  (+8 more)
(+11 files in other folders)
